task2/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: dockerhub-credentials # name of dockerhub credential secret
      containers:
        - name: backend
          image: "docker-private-org/backend:tag"
          imagePullPolicy: IfNotPresent # change to Always if using same image tag every time
          ports:
            - containerPort: 3000
# Change resources based on usage or apps configuration
          resources:
            requests:
              memory: "100Mi"
            limits:
              memory: "1024Mi"
              cpu: "1000m"

# All backend ENVs go here
#          env:
#            - name: MONGO_URL
#              value: mongodb://mongo:27017/application
