task2/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: backend
spec:
  rules:
  - host: example.com # replace with backend domain
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: backend
            port:
              number: 3000
  tls:
  - hosts:
    - example.com # replace with backend domain
    secretName: backend # certificate secret name
